...

export function SettingsButton() {
  const t = useText(text);
  const styles = useStyles();

  return (
    <Link testID="settings-open" href="/settings" style={styles.link}>
      {t('settings.title')}
    </Link>
  );
}

const useStyles = createStyles((theme) => ({
...
